--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <article class="payment-card">
         <header>
             <img src="./imagenes/5f51bd7cd443370394656ef2e8a363b9-grano-de-caf--con-hojas-by-vexels.png" alt="coffe bean">
+            <p>imagen</p>
         </header>
         <main>
             <h1>Order Summary</h1>
